Closed
Bug 201866
Opened 22 years ago
Closed 22 years ago
spellcheck should not check quoted text (plain text compose)
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: calum.mackay, Assigned: mscott)
References
Details
Attachments
(1 file)
|
2.05 KB,
patch
|
mkaply
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030412
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030412
Bug 173046 fixed the spellchecker to not spellcheck quoted text, since you don't
really want, by default - to spellcheck text you didn't write. This fix only
applied to html mail compose.
This bug is being logged to request a fix for plain text compose.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
| Reporter | ||
Updated•22 years ago
|
Summary: spellcheck sahould not check quoted for (plain text (plaintext) compose) → spellcheck should not check quoted for (plain text (plaintext) compose)
| Reporter | ||
Updated•22 years ago
|
Summary: spellcheck should not check quoted for (plain text (plaintext) compose) → spellcheck should not check quoted text (plain text compose)
Comment 1•22 years ago
|
||
This isn't a composer bug; it's a mail bug -->
Assignee: composer → ducarroz
Component: Editor: Composer → Composition
Product: Browser → MailNews
QA Contact: cpetersen0953 → esther
Hi All,
I just checked out Netscape 7.1's spell checker XPI in 1.4 general release.
And, it works. Doesn't check quoted text either.
ftp://ftp.netscape.com/pub/netscape7/english/7.1/windows/win32/jgksyc/spellchk.xpi
--Tony
p.s. checking quoted text makes us all look rather amateurish to our customers.
This band-aid will help us all save face until this bugs FINALLY gets fixed
| Assignee | ||
Comment 3•22 years ago
|
||
I care about this for thunderbird. re-assigning. Maybe JF can show me how easy
it is to add a wrapper tag around quoted plain text replies which the spell
check engine can key off of.
Assignee: ducarroz → scott
Blocks: bms
| Assignee | ||
Comment 4•22 years ago
|
||
*** Bug 214505 has been marked as a duplicate of this bug. ***
Comment 5•22 years ago
|
||
How can 7.1 do this?
That implies the spellchecker knows that it is quoted text...
anyone want to look at the NS source code? :)
The spellchecker knows nothing about skipping ... it's a filter registered on
the TextServices module ... the one used by Composer/Mail's spellchecker lives in:
mozilla/editor/composer/src/nsComposeTxtSrvFilter.cpp
| Assignee | ||
Comment 7•22 years ago
|
||
Mike 7.1 does not skip replies to plain text compose either. This is an open bug
that needs to be fixed. Which is why I assigned it to myself. We have to do some
work in plain text compose to make this techincally possible.
Hi Scott,
Check out (my) comment #2. My Netscape 7.1 spell checker does indeed skip
plain text quoted messages. Have you tested it lately? Maybe you are using
Mozilla 1.5 alpha?
--Tony
| Assignee | ||
Comment 9•22 years ago
|
||
Are you sure you were not inside an HTML editor instance? Using NS7.1 with the
spell checker with plain text does not work for me. You must have the Use HTML
compose checkbox turned off in Account Settings for the account you are replying
from to truly be in plain text compose.
I can assure you from working "on the other side" that this code does not exist
at all. We need to wrap plain text replies just like HTML compose does with the
block=cite tag to make editor skip over these elements before handing the text
off to the compose window.
Anyway arguing about that is moot and has no bearing on the fact that we want to
fix this and I'm planning on doing so for Thunderbird.
Let's focus on the fix.
| Assignee | ||
Comment 10•22 years ago
|
||
I have a fix for this feature.
Kin, it turns out editor already wraps quoted material for plain text with a pre
or a span tag:
http://lxr.mozilla.org/seamonkey/source/editor/libeditor/html/nsHTMLDataTransfer.cpp#1944
and editor sets a value of _moz_quote="true" on the pre or the span attribute.
I thought I was going to have to write code to wrap plain text quoted material
in a tag.
Knowing this made the rest of the bug easy to fix. I added a few more atoms to
nsComposeTxtSrvFilter to check for this additional information.
Patch coming up.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 11•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #128919 -
Flags: superreview?(kin)
Comment 12•22 years ago
|
||
Comment on attachment 128919 [details] [diff] [review]
the fix for plain text
sr=kin@netscape.com
==== I'd lose the "Quote" in mPreQuoteAtom and mSpanQuoteAtom, but it's up to
you.
==== Can you line up the comments you added in the .h file?
Attachment #128919 -
Flags: superreview?(kin) → superreview+
Comment 13•22 years ago
|
||
Comment on attachment 128919 [details] [diff] [review]
the fix for plain text
r=mkaply
same comment as kin :)
Attachment #128919 -
Flags: review+
| Assignee | ||
Comment 14•22 years ago
|
||
fixed (with the review comments).
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 15•22 years ago
|
||
Confirmed fixed, 200308081, mailnews & thunderbird, linux/x86.
Comment 16•22 years ago
|
||
Does the fix also include *not* checking the "Written by Miscrean Splleler on
Aug 1, 2003" line that it at the front of every reply/forward quote block
Comment 18•22 years ago
|
||
This bug consistently reoccurs when the Enigmail extension is installed.
Tested on Mozilla 1.5 20030925, Enigmail 0.76.7.0 (http://enigmail.mozdev.org/).
Updated•21 years ago
|
Product: MailNews → Core
Comment 19•19 years ago
|
||
I still seem to be having this problem in thunderbird 1.5. Is there something that needs to be done to enable the fix?
Updated•17 years ago
|
Product: Core → MailNews Core
Comment 20•11 years ago
|
||
I still see this in Version 31.1.2 (packaged in Ubuntu) when replying to plain text emails.
Spellcheck is checking the whole message.
You need to log in
before you can comment on or make changes to this bug.
Description
•