Bug #201866 --> Spell checker should not check qutoed text for plain text compose. r=mkapply sr=kin