editor/composer/src/nsComposeTxtSrvFilter.cpp
@@ -47,6 +47,9 @@ nsComposeTxtSrvFilter::nsComposeTxtSrvFilter() :
 {
 
   mBlockQuoteAtom  = do_GetAtom("blockquote");
+  mPreAtom         = do_GetAtom("pre");
+  mSpanAtom        = do_GetAtom("span");
+  mMozQuoteAtom    = do_GetAtom("_moz_quote");
   mTypeAtom        = do_GetAtom("type");
   mScriptAtom      = do_GetAtom("script");
   mTextAreaAtom    = do_GetAtom("textarea");
@@ -76,6 +79,13 @@ nsComposeTxtSrvFilter::Skip(nsIDOMNode* aNode, PRBool *_retval)
             *_retval = cite.EqualsIgnoreCase("cite");
           }
         }
+      } else if (tag == mPreAtom || tag == mSpanAtom) {
+          if (mIsForMail) {
+            nsAutoString mozQuote;
+            if (NS_SUCCEEDED(content->GetAttr(kNameSpaceID_None, mMozQuoteAtom, mozQuote))) {
+              *_retval = mozQuote.EqualsIgnoreCase("true");            
+            }
+          }         
       } else if (tag == mScriptAtom ||
                  tag == mTextAreaAtom ||
                  tag == mSelectAreaAtom ||
